--- a/index.html
+++ b/index.html
@@ -29,8 +29,16 @@
         </div>
     </section>
     <section class="heropage">
-        <p>A Celebration of Food <br>
-            Discover a World of Flavors at the GTCO Food & Drink Festival: A Celebration of Food for Food Enthusiasts and Small Businesses.</p>
+        <div class="container grid">
+            <div class="heropage-text">
+                <h1>A Celebration of Food </h1>
+                    <p>Discover a World of Flavors at the GTCO Food & Drink Festival: A Celebration of Food for Food Enthusiasts and Small Businesses</p>
+                    <a href="#" class="btn btn-outline">Read More</a>
+            </div>
+            <div class="heropage-circle-text">
+                <img src="" alt="">
+            </div>
+        </div>
     </section>
 </body>
 </html>
