--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
           </div>
           <div class="heropage-text">
             <h1>A Celebration of Food</h1>
-            <p>
-              Discover a World of Flavors at the GTCO Food & Drink Festival: A
+            <br>
+              Discover a World of Flavors at the GTCO Food & Drink Festival</br> A
               Celebration of Food for Food Enthusiasts and Small Businesses
             </p>
             <a href="#" class="btn btn-outline">Read More</a>
